# anime

./: .gitignore  CLAUDE.md  README.md
.agents/skills/find-skills/: SKILL.md
.trae/skills/anime-translator/: SKILL.md
anime-agent/: main.py  pyproject.toml
anime-agent/app/agent/: anime_master.py  context_manager.py
anime-agent/app/api/: main.py
anime-agent/app/api/routes/: chat.py
anime-agent/app/db/: build_qdrant_vector_db.py  qdrant_client.py  rag.py  user_chats.py
anime-agent/app/models/: anime_processor.py  chat.py
anime-agent/app/utils/: __init__.py  snowflake.py
anime-agent/eval/: eval_dataset.json  eval_rag.py  test_e2e.py
anime-agent/eval/reports/: eval_20260630_155538.json  eval_20260630_165540.json
anime-agent/prompts/: original.md  synopsis.md
anime-agent/scripts/: check_db.py  check_qdrant.py
backend/: pom.xml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: AnimeCard.vue  ConfirmDialog.vue  Footer.vue  Message.vue  Navbar.vue  VideoControls.vue
frontend/src/composables/: useDanmakuEngine.js  useDanmakuWebSocket.js
frontend/src/router/: index.js
frontend/src/stores/: anime.js  auth.js
frontend/src/types/: index.ts
frontend/src/utils/: axios.js  confirm.js  eventBus.ts  message.js
frontend/src/views/: AgentChat.vue  AnimeDetail.vue  AnimeGame.vue  Browse.vue  CharacterGame.vue  Favorites.vue  GameSelection.vue  Home.vue  Login.vue  Messages.vue  Profile.vue  Register.vue  SearchResult.vue  VideoPlayer.vue
(+108 files in other folders)
