[project]
name = "anime-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=2.7.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "pymysql>=1.1.0",
    "notebook>=7.5.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.30.0",
    "qdrant-client>=1.7.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
